# boo

./: .gitignore  MEMO.md  MeB.gro  MethaneA.cif  MethaneA.ipynb  MethaneB.ipynb  Pipfile  README.md  TIPS.md  boo.ipynb  boo.py  cif2gro.ipynb  gromacs.py  introduction.ipynb  projection.py  pyproject.toml
Methane/: .gitignore  CH配向.ipynb  Makefile  Me1.gro  MeB.gro  MeV.gro  Methane1.ipynb  MethaneA.cif  MethaneA.ipynb  MethaneAR.cif  MethaneAR.gro  MethaneAR333.gro  MethaneA_original.cif  MethaneB.ipynb  MethaneV.ipynb  a-Mn.ipynb  boo.ipynb  boo.py  cif2gro.ipynb  cif2gro_MethaneA.ipynb  msd.ipynb  read_gro3.py  rotcorr.ipynb  並進周期性.ipynb  並進拡散.ipynb  回転相関.ipynb
Methane/testcase/: CH4.gro  CH4.itp  CH4.top  Makefile  MeB.top  MethaneAR333.top  init.mdp
Nitrogen/: NitrogenB.gro  NitrogenB.ipynb  gromacs.py
