[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "boo"
version = "0.1" # major.minor.fix
authors = [
  { name="Masakazu Matsumoto", email="vitroid@gmail.com" },
]
description = "Bond orientation order"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy"]

[project.urls]
"Homepage" = "https://github.com/vitroid/boo"
"Bug Tracker" = "https://github.com/vitroid/boo/issues"
